Fix header spacing (#788)
* Fix header spacing

* Collapsible

--- a/src/pydata_sphinx_theme/assets/styles/sections/_header.scss
+++ b/src/pydata_sphinx_theme/assets/styles/sections/_header.scss
@@ -5,8 +5,17 @@
   padding: 0.5rem 0;
   max-width: 100vw;
 
-  .container-xl {
+  .bd-header__inner {
     height: 100%;
+    gap: 1rem;
+    padding-left: 1rem;
+    padding-right: 1rem;
+  }
+
+  #navbar-collapsible {
+    // Remove padding because we inherit padding from the parent container
+    padding-left: 0;
+    padding-right: 0;
   }
 
   #navbar-end,
@@ -36,13 +45,7 @@
     overflow-y: auto;
     @include scrollbar-style;
 
-    // On smaller screens, add margin to the navbar start + toggle button
-    #navbar-start {
-      margin-left: 1rem;
-    }
-
     button.navbar-toggler {
-      margin-right: 1rem;
       border-color: var(--pst-color-text-muted);
       color: var(--pst-color-text-muted);
     }
